use bigbadselect namespace

--- a/examples/simple.html
+++ b/examples/simple.html
@@ -2,9 +2,9 @@
 <html>
   <head>
    <title>Simple Select</title>
-   <link rel="stylesheet" href="../src/selectify.css">
+   <link rel="stylesheet" href="../src/bigbadselect.css">
    <script src="js/jquery-1.9.1.js" type="text/javascript"></script>
-   <script src="../src/selectify.js" type="text/javascript"></script>
+   <script src="../src/bigbadselect.js" type="text/javascript"></script>
   </head>
   <body>
     <h1>Simple Select Example</h1>
@@ -19,7 +19,7 @@
     </select>
 
     <script>
-      $('select').selectify();
+      $('select').bigbadselect();
     </script>
   </body>
 </html>
