Added v0.0.1 download link.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ plugin is very simplistic, and designed for people who want to do their
 own styling. Comes with its own basic css that can be easily modified.
     </p>
     <div id="download">
-      <a href="https://github.com/westoque/bigbadselect">Download</a>
+      <a href="http://hivelocity.dl.sourceforge.net/project/bigbadselect/bigbadselect-0.0.1.zip">Download v0.0.1</a>
     </div>
     <h2>Demo</h2>
     <div>
